<resources>
    <string name="app_name">Pharmacy-App</string>
    <string name="buy">Buy</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="please_enter_the_otp">Please Enter the OTP</string>
    <string name="logout">Logout</string>
    <string name="sign_in_using">Sign In using</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="otpet1">otpET1</string>
    <string name="otpet6">otpET6</string>
    <string name="otpet5">otpET5</string>
</resources>