<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="35dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/android"
    tools:context=".OTPVerification">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pharmify_logo"
        android:layout_gravity="center"
        android:contentDescription="Logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_the_otp"
        android:gravity="center"
        android:textColor="#66000000"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:textColor="#66000000"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/otpMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#CC000000"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <EditText
            android:id="@+id/otpET1"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:hint="1"
            android:textColorHint="#99FFFFFF"/>

        <EditText
            android:id="@+id/otpET2"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:hint="1"
            android:textColorHint="#99FFFFFF"/>

        <EditText
            android:id="@+id/otpET3"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:hint="1"
            android:textColorHint="#99FFFFFF"/>

        <EditText
            android:id="@+id/otpET4"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:hint="1"
            android:textColorHint="#99FFFFFF"/>

        <EditText
            android:id="@+id/otpET5"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:hint="1"
            android:textColorHint="#99FFFFFF"/>

        <EditText
            android:id="@+id/otpET6"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:hint="1"
            android:textColorHint="#99FFFFFF"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:id="@+id/btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/verify"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_the_otp"/>

        <TextView
            android:id="@+id/resendBtn"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>