<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="35dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/android"
    tools:context=".PhoneLogin">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pharmify_logo"/>

    <EditText
        android:layout_marginTop="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:background="@drawable/round_back"
        android:layout_gravity="center"
        android:id="@+id/phoneNo"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:hint="Phone Number"/>

    <ProgressBar
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/login"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <View
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000"
            android:layout_toStartOf="@+id/orTxt"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/orTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="OR"
            android:textColor="#80000000"
            android:textSize="12sp" />

        <View
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000"
            android:layout_toEndOf="@+id/orTxt"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <TextView
        android:layout_marginVertical="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_using" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_gravity="center"
            android:id="@+id/signInWithGoogle"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/round_back">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/search" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_gravity="center"
            android:id="@+id/signInWithEmail"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_back">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/email" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>